exports[`no-sleep-in-test > invalid(1): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(1): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(10): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\treturn setTimeout(resolve, 500);\n});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => {
  4 | 	return setTimeout(resolve, 500);
  5 | });
  6 | });

`;

exports[`no-sleep-in-test > invalid(10): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\treturn setTimeout(resolve, 500);\n});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	return setTimeout(resolve, 500);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | });
    | ^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(11): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(done => setTimeout(done, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(done => setTimeout(done, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(11): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(done => setTimeout(done, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(done => setTimeout(done, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(12): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(resolve));
  4 | });

`;

exports[`no-sleep-in-test > invalid(12): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(resolve));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(13): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve(), 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => resolve(), 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(13): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve(), 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => resolve(), 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(14): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve()));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => resolve()));
  4 | });

`;

exports[`no-sleep-in-test > invalid(14): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve()));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => resolve()));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(15): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => {\n\treturn resolve();\n}, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => {
  4 | 	return resolve();
  5 | }, 500));
  6 | });

`;

exports[`no-sleep-in-test > invalid(15): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => {\n\treturn resolve();\n}, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	return resolve();
    | ^^^^^^^^^^^^^^^^^^
> 5 | }, 500));
    | ^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(16): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(function () {\n\tresolve();\n}, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(function () {
  4 | 	resolve();
  5 | }, 500));
  6 | });

`;

exports[`no-sleep-in-test > invalid(16): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(function () {\n\tresolve();\n}, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(function () {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	resolve();
    | ^^^^^^^^^^^
> 5 | }, 500));
    | ^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(17): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => globalThis.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => globalThis.setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(17): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => globalThis.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => globalThis.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(18): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => global.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => global.setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(18): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => global.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => global.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(19): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => delay(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(19): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => delay(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(2): import test from 'node:test';\ntest('waits', {timeout: 1000}, async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', {timeout: 1000}, async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(2): import test from 'node:test';\ntest('waits', {timeout: 1000}, async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', {timeout: 1000}, async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(20): import test from 'node:test';\nimport {setTimeout as delay} from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => delay(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(20): import test from 'node:test';\nimport {setTimeout as delay} from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => delay(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(21): import test from 'node:test';\nimport * as timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(21): import test from 'node:test';\nimport * as timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(22): import test from 'node:test';\nimport * as timers from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(22): import test from 'node:test';\nimport * as timers from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(23): import test from 'node:test';\nimport timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(23): import test from 'node:test';\nimport timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(24): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(24): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(25): import test from 'node:test';\nimport {setTimeout as delay} from 'timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(25): import test from 'node:test';\nimport {setTimeout as delay} from 'timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(26): import test from 'node:test';\nimport * as timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(26): import test from 'node:test';\nimport * as timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(27): import test from 'node:test';\nimport * as timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(27): import test from 'node:test';\nimport * as timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(28): import test from 'node:test';\nimport timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(28): import test from 'node:test';\nimport timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(29): import test from 'node:test';\nimport timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(29): import test from 'node:test';\nimport timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(3): import test from 'node:test';\ntest.only('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test.only('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(3): import test from 'node:test';\ntest.only('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test.only('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(30): import {before} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbefore(async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import {before} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | before(async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(30): import {before} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbefore(async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import {before} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | before(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(31): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.todo('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.todo('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(31): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.todo('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.todo('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(32): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {todo: 'later'}, async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {todo: 'later'}, async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(32): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {todo: 'later'}, async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {todo: 'later'}, async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(33): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\tawait delay(500);\n});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async () => {
  5 | 	await delay(500);
  6 | });
  7 | });

`;

exports[`no-sleep-in-test > invalid(33): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\tawait delay(500);\n});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async () => {
> 5 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });
  7 | });

`;

exports[`no-sleep-in-test > invalid(34): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test.todo('child', async () => {\n\tawait delay(500);\n});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test.todo('child', async () => {
  5 | 	await delay(500);
  6 | });
  7 | });

`;

exports[`no-sleep-in-test > invalid(34): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test.todo('child', async () => {\n\tawait delay(500);\n});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test.todo('child', async () => {
> 5 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });
  7 | });

`;

exports[`no-sleep-in-test > invalid(35): import test from 'node:test';\ntest('waits', async () => {\n\tawait new Promise<void>(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async () => {
  3 | 	await new Promise<void>(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(35): import test from 'node:test';\ntest('waits', async () => {\n\tawait new Promise<void>(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async () => {
> 3 | 	await new Promise<void>(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(4): import {it} from 'node:test';\nit('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(4): import {it} from 'node:test';\nit('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import {it} from 'node:test';
  2 | it('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(5): import * as nodeTest from 'node:test';\nnodeTest.test('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(5): import * as nodeTest from 'node:test';\nnodeTest.test('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(6): import {beforeEach} from 'node:test';\nbeforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(6): import {beforeEach} from 'node:test';\nbeforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(7): import test from 'node:test';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await t.test('child', async () => {
  4 | 	await new Promise(resolve => setTimeout(resolve, 500));
  5 | });
  6 | });

`;

exports[`no-sleep-in-test > invalid(7): import test from 'node:test';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await t.test('child', async () => {
> 4 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });
  6 | });

`;

exports[`no-sleep-in-test > invalid(8): import test from 'node:test';\ntest('waits', async context => {\n\tawait context.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async context => {
  3 | 	await context.test('child', async () => {
  4 | 		await new Promise(resolve => setTimeout(resolve, 500));
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(8): import test from 'node:test';\ntest('waits', async context => {\n\tawait context.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async context => {
  3 | 	await context.test('child', async () => {
> 4 | 		await new Promise(resolve => setTimeout(resolve, 500));
    | 		      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(9): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\tsetTimeout(resolve, 500);\n});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => {
  4 | 	setTimeout(resolve, 500);
  5 | });
  6 | });

`;

exports[`no-sleep-in-test > invalid(9): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\tsetTimeout(resolve, 500);\n});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	setTimeout(resolve, 500);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | });
    | ^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;
